objects/Quote_Response__c.object
<CustomObject>
    <fields>
        <fullName>Admin_Fee_Types__c</fullName>
        <label>Admin Fee Types</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Per Capita</fullName>
                </value>
                <value>
                    <fullName>% of Net Claims</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blue_Star_Account_Number__c</fullName>
        <label>Blue Star Account Number</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>HMOStandAlone</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>StudentHealth</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CorpEntCd__c</fullName>
        <label>CorpEntCd</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Medical</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>PRO</fullName>
                </value>
                <value>
                    <fullName>RET</fullName>
                </value>
                <value>
                    <fullName>RETROSPECTPREMCALL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funding_Type_multi__c</fullName>
        <label>Funding Type_multi</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ACAP</fullName>
                </value>
                <value>
                    <fullName>ASO</fullName>
                </value>
                <value>
                    <fullName>Cost Plus</fullName>
                </value>
                <value>
                    <fullName>Minimum Premium</fullName>
                </value>
                <value>
                    <fullName>Prem</fullName>
                </value>
                <value>
                    <fullName>Prospective Premium</fullName>
                </value>
                <value>
                    <fullName>COST</fullName>
                </value>
                <value>
                    <fullName>MPP</fullName>
                </value>
                <value>
                    <fullName>PAR</fullName>
                </value>
                <value>
                    <fullName>SERV</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>RSR</fullName>
                </value>
                <value>
                    <fullName>Insured</fullName>
                </value>
                <value>
                    <fullName>NDSS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Heron_Customer_Name__c</fullName>
        <label>Heron Customer Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heron_Opportunity_Name__c</fullName>
        <label>Heron Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Heron_Opportunity_Number__c</fullName>
        <label>Heron Opportunity Id</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Network__c</fullName>
        <label>Product Network</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Method__c</fullName>
        <label>Rating Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FullService</fullName>
                </value>
                <value>
                    <fullName>ExperienceRated</fullName>
                </value>
                <value>
                    <fullName>NonMCHC</fullName>
                </value>
                <value>
                    <fullName>SharedProcess</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ResponseToQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Rates &amp; Fees</relationshipLabel>
        <relationshipName>Quote_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponseToRequest__c</fullName>
        <label>Quote Request</label>
        <referenceTo>Quote_Request_Summary__c</referenceTo>
        <relationshipLabel>Rates &amp; Fees</relationshipLabel>
        <relationshipName>Quote_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Single_Family_Indicator__c</fullName>
        <label>Single Family Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underwriter_Id__c</fullName>
        <label>Underwriter Id</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underwriter_Name__c</fullName>
        <label>Underwriter Name</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version_Status__c</fullName>
        <label>Version Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Response</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>